--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@daypilot/daypilot-lite-react": "^3.32.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
+    "@floating-ui/react": "^0.27.5",
     "@formkit/auto-animate": "^0.8.2",
     "@fragaria/address-formatter": "^6.5.0",
     "@inertiajs/react": "^2.0.5",
