--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,9 +1,13 @@
 {
   "extends": [
-    "stylelint-config-standard", 
+    "stylelint-config-standard",
     "@stylistic/stylelint-config"
   ],
   "format": "esm",
+  "rules": {
+    "@stylistic/indentation": 2,
+    "@stylistic/selector-list-comma-newline-after": null
+  },
   "overrides": [
     {
       "files": ["**/*.css.ts"],
