--- a/config/i18n.yml
+++ b/config/i18n.yml
@@ -3,7 +3,9 @@ translations:
   - file: "app/frontend/lib/locales/:locale.json"
     patterns:
       - "*"
-      - "!*.activerecord"
-      - "!*.errors"
-      - "!*.number.nth"
+      - "!*.activerecord.*"
+      - "!*.faker.*"
+      - "!*.errors.*"
+      - "!*.number.nth.*"
+      - "!*.good_job.*"
 
