--- a/package.json
+++ b/package.json
@@ -19,133 +19,139 @@
     "eslint:inspect": "npx @eslint/config-inspector@latest"
   },
   "dependencies": {
-    "@daypilot/daypilot-lite-react": "^3.34.0",
+    "@daypilot/daypilot-lite-react": "^5.2.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
-    "@floating-ui/react": "^0.27.8",
-    "@formkit/auto-animate": "^0.8.2",
-    "@fragaria/address-formatter": "^6.5.0",
-    "@inertiajs/react": "^2.0.11",
+    "@floating-ui/react": "^0.27.16",
+    "@formkit/auto-animate": "^0.9.0",
+    "@fragaria/address-formatter": "^6.7.1",
+    "@inertiajs/react": "^2.3.6",
     "@linaria/core": "^6.3.0",
-    "@mantine/core": "^8.0.1",
-    "@mantine/dates": "^8.0.1",
-    "@mantine/dropzone": "^8.0.1",
-    "@mantine/form": "^8.0.1",
-    "@mantine/hooks": "^8.0.1",
-    "@mantine/modals": "^8.0.1",
+    "@mantine/core": "^8.3.10",
+    "@mantine/dates": "^8.3.10",
+    "@mantine/dropzone": "^8.3.10",
+    "@mantine/form": "^8.3.10",
+    "@mantine/hooks": "^8.3.10",
+    "@mantine/modals": "^8.3.10",
     "@mantine/next": "^6.0.22",
-    "@mantine/notifications": "^8.0.1",
+    "@mantine/notifications": "^8.3.10",
     "@mantine/prism": "^6.0.22",
     "@mantine/rte": "^5.10.5",
-    "@mantine/tiptap": "^8.0.1",
-    "@mantine/vanilla-extract": "^8.0.1",
-    "@tanstack/react-query": "^5.76.1",
-    "@tiptap/extension-highlight": "^2.12.0",
-    "@tiptap/extension-link": "^2.12.0",
-    "@tiptap/extension-subscript": "^2.12.0",
-    "@tiptap/extension-superscript": "^2.12.0",
-    "@tiptap/extension-text-align": "^2.12.0",
-    "@tiptap/extension-underline": "^2.12.0",
-    "@tiptap/pm": "^2.12.0",
-    "@tiptap/react": "^2.12.0",
-    "@tiptap/starter-kit": "^2.12.0",
-    "@xstate/react": "^5.0.4",
+    "@mantine/tiptap": "^8.3.10",
+    "@mantine/vanilla-extract": "^8.3.10",
+    "@tanstack/react-query": "^5.90.16",
+    "@tiptap/extension-bubble-menu": "^3.14.0",
+    "@tiptap/extension-code-block-lowlight": "^3.14.0",
+    "@tiptap/extension-color": "^3.14.0",
+    "@tiptap/extension-floating-menu": "^3.14.0",
+    "@tiptap/extension-highlight": "^3.14.0",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-subscript": "^3.14.0",
+    "@tiptap/extension-superscript": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/extension-underline": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
+    "@xstate/react": "^6.0.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.19",
     "dinero.js": "^1.9.1",
-    "framer-motion": "^12.12.1",
-    "google-libphonenumber": "^3.2.40",
-    "i18next": "^25.2.0",
-    "i18next-browser-languagedetector": "^8.1.0",
+    "framer-motion": "^12.23.26",
+    "google-libphonenumber": "^3.2.43",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
-    "indefinite": "^2.5.1",
-    "lodash-es": "^4.17.21",
-    "mantine-contextmenu": "^7.17.1",
+    "indefinite": "^2.5.2",
+    "lodash-es": "^4.17.22",
+    "mantine-contextmenu": "^8.3.11",
     "mantine-flagpack": "^4.1.1",
     "mantine-react-table": "^1.3.4",
-    "normalize-url": "^8.0.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-error-boundary": "^6.0.0",
-    "react-html-props": "^2.0.10",
-    "react-i18next": "^15.5.1",
+    "normalize-url": "^8.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-error-boundary": "^6.0.1",
+    "react-html-props": "^2.1.1",
+    "react-i18next": "^16.5.1",
     "react-icons": "^5.5.0",
     "react-use-url": "^1.0.5",
     "use-inertia-form": "^4.6.0",
-    "xstate": "^5.19.3",
-    "zustand": "^5.0.4"
+    "xstate": "^5.25.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@axe-core/react": "^4.10.1",
-    "@babel/core": "^7.27.1",
-    "@babel/preset-react": "^7.27.1",
-    "@babel/preset-typescript": "^7.27.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/compat": "^1.2.9",
-    "@eslint/json": "^0.12.0",
+    "@axe-core/react": "^4.11.0",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@commitlint/config-conventional": "^20.3.0",
+    "@eslint/compat": "^2.0.0",
+    "@eslint/json": "^0.14.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
-    "@stylistic/eslint-plugin": "^4.2.0",
-    "@stylistic/stylelint-config": "^2.0.0",
-    "@stylistic/stylelint-plugin": "^3.1.2",
-    "@tanstack/eslint-plugin-query": "^5.74.7",
-    "@tanstack/react-query-devtools": "^5.76.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@stylistic/eslint-plugin": "^5.6.1",
+    "@stylistic/stylelint-config": "^3.0.1",
+    "@stylistic/stylelint-plugin": "^4.0.0",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/indefinite": "^2.3.4",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.15.19",
+    "@types/node": "^25.0.3",
     "@types/postcss-flexbugs-fixes": "^5.0.3",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "@vitejs/plugin-react": "^4.4.1",
-    "@wyw-in-js/vite": "^0.6.0",
-    "autoprefixer": "^10.4.21",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@wyw-in-js/vite": "^0.8.1",
+    "autoprefixer": "^10.4.23",
     "babel-loader": "^10.0.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.1.4",
     "commitizen": "^4.3.1",
-    "eslint": "9.27.0",
-    "eslint-import-resolver-typescript": "^4.3.5",
+    "eslint": "9.39.2",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-json": "^4.0.1",
-    "eslint-plugin-jsonc": "^2.20.1",
+    "eslint-plugin-jsonc": "^2.21.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "git-cz": "^4.9.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jsdom": "^26.1.0",
-    "jsonc-eslint-parser": "^2.4.0",
-    "lint-staged": "^16.0.0",
-    "msw": "^2.8.4",
+    "jest": "^30.2.0",
+    "jsdom": "^27.4.0",
+    "jsonc-eslint-parser": "^2.4.2",
+    "lint-staged": "^16.2.7",
+    "msw": "^2.12.7",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^16.1.0",
-    "postcss-nesting": "^13.0.1",
-    "postcss-preset-env": "^10.1.6",
-    "postcss-preset-mantine": "^1.17.0",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
+    "postcss-preset-env": "^10.6.0",
+    "postcss-preset-mantine": "^1.18.0",
     "postcss-simple-vars": "^7.0.1",
     "postcss-syntax": "^0.36.2",
     "react-component-analyzer": "^1.0.53",
-    "stylelint": "^16.19.1",
-    "stylelint-config-standard": "^38.0.0",
-    "ts-jest": "^29.3.4",
+    "stylelint": "^16.26.1",
+    "stylelint-config-standard": "^39.0.1",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
-    "type-fest": "^4.41.0",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
+    "type-fest": "^5.3.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0",
     "vite-plugin-dynamic-import": "^1.6.0",
     "vite-plugin-full-reload": "^1.2.0",
-    "vite-plugin-ruby": "^5.1.1",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.4"
+    "vite-plugin-ruby": "^5.1.2",
+    "vite-tsconfig-paths": "^6.0.3",
+    "vitest": "^4.0.16"
   },
   "resolutions": {
     "@types/react": "^18.2.75",
